Pull request #393: fix title margin on exclusions page
Merge in EXTENSIONS/vpn-extension to master

Squashed commit of the following:

commit de569a32a0252e7abae04b5ca8a50879ccd76d12
Author: Anton <a.kaprielov@adguard.com>
Date:   Wed May 11 12:54:35 2022 +0300

    AG-14084 fix title margin on exclusions page

--- a/src/options/components/Exclusions/exclusions.pcss
+++ b/src/options/components/Exclusions/exclusions.pcss
@@ -1,7 +1,5 @@
 .exclusions {
     &__mode {
-        margin-left: 20px;
-
         &__title {
             font-weight: bold;
         }
@@ -15,6 +13,8 @@
 
     &__search {
         margin-bottom: 16px;
+        width: calc(100% + 20px);
+        transform: translateX(-20px);
     }
 }
 
